--- Auto-Git Commit ---

--- a/Linux/Debug/perf/1. perf 简介.md
+++ b/Linux/Debug/perf/1. perf 简介.md
@@ -36,13 +36,13 @@
   - [7.6. 3种使用方式和性能分析的3个过程](#76-3种使用方式和性能分析的3个过程)
   - [7.7. 使用示例](#77-使用示例)
 - [8. Perf 性能事件](#8-perf-性能事件)
-  - [8.1. perf list查看所有性能事件](#81-perf-list查看所有性能事件)
-  - [8.2. 六种类型事件](#82-六种类型事件)
-    - [8.2.1. Hardware Events (PMCs): 硬件性能事件(PMCs)](#821-hardware-events-pmcs-硬件性能事件pmcs)
-    - [8.2.2. Software Events: 软件性能事件](#822-software-events-软件性能事件)
-    - [8.2.3. Kernel Tracepoints: 内核态Tracepoints](#823-kernel-tracepoints-内核态tracepoints)
-    - [8.2.4. User-Level Statically Defined Tracing (USDT): 用户态tracepoint](#824-user-level-statically-defined-tracing-usdt-用户态tracepoint)
-    - [8.2.5. Dynamic Tracing: 动态追踪](#825-dynamic-tracing-动态追踪)
+  - [8.1. 六种类型事件](#81-六种类型事件)
+    - [8.1.1. perf list查看所有性能事件](#811-perf-list查看所有性能事件)
+  - [8.2. Hardware Events (PMCs): 硬件性能事件(PMCs)](#82-hardware-events-pmcs-硬件性能事件pmcs)
+  - [8.3. Software Events: 软件性能事件](#83-software-events-软件性能事件)
+  - [8.4. Kernel Tracepoints: 内核态Tracepoints](#84-kernel-tracepoints-内核态tracepoints)
+  - [8.5. User-Level Statically Defined Tracing (USDT): 用户态tracepoint](#85-user-level-statically-defined-tracing-usdt-用户态tracepoint)
+  - [8.6. Dynamic Tracing: 动态追踪](#86-dynamic-tracing-动态追踪)
 - [9. 例子](#9-例子)
   - [9.1. CPU Statistics: CPU统计](#91-cpu-statistics-cpu统计)
     - [9.1.1. CPU 微架构](#911-cpu-微架构)
@@ -1140,13 +1140,24 @@ Removed event: probe:tcp_sendmsg
 
 这张图大致列出了perf支持的跟踪事件源.
 
-我们看到perf支持这么多的事件和trace，它**依赖了很多的接口**来干这件事情。
+## 8.1. 六种类型事件
 
-## 8.1. perf list查看所有性能事件
+分为六种类型的事件:
+
+* **硬件事件**(`Hardware Events`): CPU性能监控计数(CPU performance monitoring counters).
+* **软件事件**(`Software Events`): 这些是基于内核计数器的低级事件. 比如, CPU迁移、次要故障和主要故障等等.
+* **内核tracepoint事件**(`Kernel Tracepoint Events`): 这些是内核中的静态检测点, 是在内核合适位置硬编码进去的.
+* **用户静态定义追踪**(`User Statically-Defined Tracing`, USDT): 这些是用户态程序中的静态tracepoint.
+* **动态追踪**(`Dynamic Tracing`): 可以在软件的任何位置创建事件, 从而可以被动态检测. 
+  * 对于**内核**来说, 利用了`kprobes`框架;
+  * 对于**用户态**程序, 使用了`uprobes`.
+* **定时分析**(`Timed Profiling`): 使用`perf record -F Hz`, 能够以任意频率收集快照(当时的系统信息). 这通常用于**CPU使用情况**分析, 并且通过**创建自定义定时中断事件**来工作.
+
+### 8.1.1. perf list查看所有性能事件
 
 **不同型号的CPU**支持的**硬件性能事件**不尽相同。**不同版本的内核**提供的**软件性能事件**与 **Tracepoint events** 也不尽相同。
 
-因此，perf提供了list工具以查看当前软硬件平台支持的性能事件列表。
+因此，perf提供了list子命令以查看当前软硬件平台支持的性能事件列表。
 
 使用方法如下：
 
@@ -1164,25 +1175,51 @@ Removed event: probe:tcp_sendmsg
 
 执行命令后，perf将给出当前软硬件平台的所有性能事件。输出结果如下图所示。每行后面括弧里的信息表示该事件是**硬件事件**、**软件事件**还是`Tracepoint events`。
 
-![2020-07-19-21-04-27.png](./images/2020-07-19-21-04-27.png)
+```
+# perf list
+List of pre-defined events (to be used in -e):
+  cpu-cycles OR cycles                               [Hardware event]
+  instructions                                       [Hardware event]
+  cache-references                                   [Hardware event]
+  cache-misses                                       [Hardware event]
+  branch-instructions OR branches                    [Hardware event]
+  branch-misses                                      [Hardware event]
+  bus-cycles                                         [Hardware event]
+  stalled-cycles-frontend OR idle-cycles-frontend    [Hardware event]
+  stalled-cycles-backend OR idle-cycles-backend      [Hardware event]
+  ref-cycles                                         [Hardware event]
+  cpu-clock                                          [Software event]
+  task-clock                                         [Software event]
+  page-faults OR faults                              [Software event]
+  context-switches OR cs                             [Software event]
+  cpu-migrations OR migrations                       [Software event]
+  minor-faults                                       [Software event]
+  major-faults                                       [Software event]
+  alignment-faults                                   [Software event]
+  emulation-faults                                   [Software event]
+  L1-dcache-loads                                    [Hardware cache event]
+  L1-dcache-load-misses                              [Hardware cache event]
+  L1-dcache-stores                                   [Hardware cache event]
+[...]
+  rNNN                                               [Raw hardware event descriptor]
+  cpu/t1=v1[,t2=v2,t3 ...]/modifier                  [Raw hardware event descriptor]
+   (see 'man perf-list' on how to encode it)
+  mem:<addr>[:access]                                [Hardware breakpoint]
+  probe:tcp_sendmsg                                  [Tracepoint event]
+[...]
+  sched:sched_process_exec                           [Tracepoint event]
+  sched:sched_process_fork                           [Tracepoint event]
+  sched:sched_process_wait                           [Tracepoint event]
+  sched:sched_wait_task                              [Tracepoint event]
+  sched:sched_process_exit                           [Tracepoint event]
+[...]
+# perf list | wc -l
+     657
+```
 
-......
+当使用**动态跟踪**，将**扩展此列表**。 此列表中的`probe:tcp_sendmsg`跟踪点是一个示例，我通过检测`tcp_sendmsg()`添加了该示例。 
 
-![2020-07-19-21-06-38.png](./images/2020-07-19-21-06-38.png)
-
-## 8.2. 六种类型事件
-
-六种类型的事件:
-* **硬件事件**(`Hardware Events`): CPU性能监控计数(CPU performance monitoring counters).
-* **软件事件**(`Software Events`): 这些是基于内核计数器的低级事件. 比如, CPU迁移、次要故障和主要故障等等.
-* **内核tracepoint事件**(`Kernel Tracepoint Events`): 这些是内核中的静态检测点, 是在内核合适位置硬编码进去的.
-* **用户静态定义追踪**(`User Statically-Defined Tracing`, USDT): 这些是用户态程序中的静态tracepoint.
-* **动态追踪**(`Dynamic Tracing`): 可以在软件的任何位置创建事件, 从而可以被动态检测. 
-  * 对于**内核**来说, 利用了`kprobes`框架;
-  * 对于**用户态**程序, 使用了`uprobes`.
-* **定时分析**(`Timed Profiling`): 使用`perf record -F Hz`, 能够以任意频率收集快照(当时的系统信息). 这通常用于**CPU使用情况**分析, 并且通过**创建自定义定时中断事件**来工作..
-
-### 8.2.1. Hardware Events (PMCs): 硬件性能事件(PMCs)
+## 8.2. Hardware Events (PMCs): 硬件性能事件(PMCs)
 
 - Hardware Event
 
@@ -1196,7 +1233,7 @@ Removed event: probe:tcp_sendmsg
 
 使用PMCs的例子, 可以见下面的 `CPU Statistics`
 
-### 8.2.2. Software Events: 软件性能事件
+## 8.3. Software Events: 软件性能事件
 
 - Software Event是**内核产生的事件/计数器**，分布在**各个功能模块**中，统计和**操作系统相关性能事件**。比如**进程切换**，等。
 
@@ -1338,7 +1375,7 @@ Check the rate of events using perf stat first, so that you can estimate the vol
 Many other events (like tracepoints) have a default of 1 anyway. You'll encounter a non-1 default for many software and hardware events.
 
 
-### 8.2.3. Kernel Tracepoints: 内核态Tracepoints
+## 8.4. Kernel Tracepoints: 内核态Tracepoints
 
 - Tracepoint Event是内核中**静态tracepoint所触发的事件**，是硬编码进内核中的, 可以用来判断程序运行期间内核的行为细节（这些tracepint的对应的sysfs节点在`/sys/kernel/debug/tracing/events`目录下）。比如system calls、TCP events、file system I/O、disk I/O、slab分配器的分配次数等。
 
@@ -1410,7 +1447,7 @@ kernel tracepoints在内核代码中实现通常是宏定义在`include/trace/ev
 
 
 
-### 8.2.4. User-Level Statically Defined Tracing (USDT): 用户态tracepoint
+## 8.5. User-Level Statically Defined Tracing (USDT): 用户态tracepoint
 
 和kernel tracepoints类似, USDT是在用户态应用中硬编码的, 对外表现就是稳定的API(事件名字和参数).
 
@@ -1433,7 +1470,7 @@ $ make -j 8
 
 关于USDT使用的例子, 见下面`Static User Tracing`.
 
-### 8.2.5. Dynamic Tracing: 动态追踪
+## 8.6. Dynamic Tracing: 动态追踪
 
 tracepoints和dynamic tracing动态追踪的不同在于下图, 说明了一个通用tracepoint的覆盖范围:
 
