--- Auto-Git Commit ---

--- a/Linux/Debug/perf/1. perf 简介.md
+++ b/Linux/Debug/perf/1. perf 简介.md
@@ -10,10 +10,10 @@
 - [3. 一个简单例子](#3-一个简单例子)
 - [4. 一行命令](#4-一行命令)
   - [4.1. 三种类型命令](#41-三种类型命令)
-  - [4.2. Listing: 列出事件](#42-listing-列出事件)
-  - [4.3. Counting: 计数统计事件](#43-counting-计数统计事件)
+  - [4.2. Listing Events: 列出事件](#42-listing-events-列出事件)
+  - [4.3. Counting Events: 事件计数](#43-counting-events-事件计数)
   - [4.4. Profiling: 采样数据](#44-profiling-采样数据)
-  - [4.5. static tracing: 静态跟踪](#45-static-tracing-静态跟踪)
+  - [4.5. Static Tracing: 静态跟踪](#45-static-tracing-静态跟踪)
   - [4.6. Dynamic Tracing: 动态追踪](#46-dynamic-tracing-动态追踪)
   - [4.7. Mixed: 混合使用](#47-mixed-混合使用)
   - [4.8. Special: 特定命令](#48-special-特定命令)
@@ -27,7 +27,7 @@
     - [6.3.2. Dwarf: 用户级释放堆栈](#632-dwarf-用户级释放堆栈)
     - [6.3.3. LBR: 硬件能力](#633-lbr-硬件能力)
     - [6.3.4. 小结](#634-小结)
-- [7. 功能概述](#7-功能概述)
+- [7. perf功能概述](#7-perf功能概述)
   - [7.1. 全局性概况](#71-全局性概况)
   - [7.2. 全局细节](#72-全局细节)
   - [7.3. 特定功能分析](#73-特定功能分析)
@@ -37,25 +37,31 @@
   - [7.7. 使用示例](#77-使用示例)
 - [8. Perf 性能事件](#8-perf-性能事件)
   - [8.1. 六种类型事件](#81-六种类型事件)
-    - [8.1.1. perf list查看所有性能事件](#811-perf-list查看所有性能事件)
-  - [8.2. Hardware Events (PMCs): 硬件性能事件(PMCs)](#82-hardware-events-pmcs-硬件性能事件pmcs)
-  - [8.3. Software Events: 软件性能事件](#83-software-events-软件性能事件)
-  - [8.4. Kernel Tracepoints: 内核态Tracepoints](#84-kernel-tracepoints-内核态tracepoints)
-  - [8.5. User-Level Statically Defined Tracing (USDT): 用户态tracepoint](#85-user-level-statically-defined-tracing-usdt-用户态tracepoint)
-  - [8.6. Dynamic Tracing: 动态追踪](#86-dynamic-tracing-动态追踪)
-- [9. 例子](#9-例子)
-  - [9.1. CPU Statistics: CPU统计](#91-cpu-statistics-cpu统计)
+  - [8.2. perf list查看所有性能事件](#82-perf-list查看所有性能事件)
+  - [8.3. Hardware Events(PMCs): 硬件性能事件(PMCs)](#83-hardware-eventspmcs-硬件性能事件pmcs)
+  - [8.4. Software Events: 软件性能事件](#84-software-events-软件性能事件)
+    - [8.4.1. 采样周期](#841-采样周期)
+  - [8.5. Kernel Tracepoints: 内核态静态tracepoints](#85-kernel-tracepoints-内核态静态tracepoints)
+    - [8.5.1. tracepoints分组](#851-tracepoints分组)
+  - [8.6. User-Level Statically Defined Tracing (USDT): 用户态静态tracepoint](#86-user-level-statically-defined-tracing-usdt-用户态静态tracepoint)
+  - [8.7. Dynamic Tracing: 动态追踪](#87-dynamic-tracing-动态追踪)
+- [9. 示例(性能分析分类)](#9-示例性能分析分类)
+  - [9.1. CPU Statistics: CPU静态统计](#91-cpu-statistics-cpu静态统计)
     - [9.1.1. CPU 微架构](#911-cpu-微架构)
-    - [9.1.2. Detailed Mode](#912-detailed-mode)
-    - [9.1.3. Specific Counters](#913-specific-counters)
-    - [9.1.4. Raw Counters](#914-raw-counters)
-    - [9.1.5. Other Options](#915-other-options)
-  - [9.2. Timed Profiling:](#92-timed-profiling)
-  - [9.3. Event Profiling:](#93-event-profiling)
-  - [9.4. Static Kernel Tracing: 静态内核态追踪](#94-static-kernel-tracing-静态内核态追踪)
-  - [9.5. Static User Tracing: 静态用户态追踪](#95-static-user-tracing-静态用户态追踪)
+    - [9.1.2. Detailed Mode: 详细模式](#912-detailed-mode-详细模式)
+    - [9.1.3. Specific Counters: 具体计数器](#913-specific-counters-具体计数器)
+    - [9.1.4. Raw Counters: 处理器支持的原始计数器](#914-raw-counters-处理器支持的原始计数器)
+    - [9.1.5. Other Options: 其他选项](#915-other-options-其他选项)
+  - [9.2. Timed Profiling(CPU Profiling): 定时间隔性能分析](#92-timed-profilingcpu-profiling-定时间隔性能分析)
+    - [9.2.1. sampling: 采样](#921-sampling-采样)
+    - [9.2.2. 分析](#922-分析)
+  - [9.3. Event Profiling: 事件分析](#93-event-profiling-事件分析)
+    - [Skew和PEBS: 指令偏移和PEBS基于采样的精确事件](#skew和pebs-指令偏移和pebs基于采样的精确事件)
+  - [9.4. Static Kernel Tracing: 内核态静态追踪](#94-static-kernel-tracing-内核态静态追踪)
+    - [Counting Syscalls: 系统调用计数](#counting-syscalls-系统调用计数)
+  - [9.5. Static User Tracing: 用户态静态追踪](#95-static-user-tracing-用户态静态追踪)
   - [9.6. Dynamic Tracing](#96-dynamic-tracing)
-  - [9.7. Scheduler Analysis](#97-scheduler-analysis)
+  - [9.7. Scheduler Analysis: 调度器分析](#97-scheduler-analysis-调度器分析)
   - [9.8. eBPF](#98-ebpf)
     - [9.8.1.](#981)
     - [9.8.2. 事件限定符](#982-事件限定符)
@@ -209,10 +215,10 @@ perf命令行接口并不能利用所有的Linux trace特性，有些trace需要
 Brendan D. Gregg 收集和写了很多一行命令, 按从小到大开销进行划分, 分为三种:
 
 * `statistics/count`: **统计/计数**, 只是事件**计数的增加**
-* `sample`: 采样. 对**某几个事件**进行**采样**, 收集**性能数据**(比如**IP**和**堆栈**), 这就意味着每隔一段时间就会收集一次数据, 所以开销变大
-* `trace`: 追踪. 收集**所有事件的性能数据**
+* `sample`: 采样. 对**某几个事件**进行**采样**, 收集**性能数据**(比如**指令指针**`IP`和**堆栈**`stack`), 这就意味着每隔一段时间就会收集一次数据, 所以开销变大
+* `trace`: 追踪. 收集**所有事件**的性能数据
 
-## 4.2. Listing: 列出事件
+## 4.2. Listing Events: 列出事件
 
 ```
 # Listing all currently known events:
@@ -222,9 +228,9 @@ perf list
 perf list 'sched:*'
 ```
 
-## 4.3. Counting: 计数统计事件
+## 4.3. Counting Events: 事件计数
 
-全是stat子命令
+全是`stat`子命令
 
 ```
 # CPU counter statistics for the specified command:
@@ -284,7 +290,7 @@ perf stat -e 'vmscan:*' -a -I 1000
 
 ## 4.4. Profiling: 采样数据
 
-子命令record
+子命令`record`
 
 子命令top, **动态显示**
 
@@ -347,7 +353,7 @@ perf top -F 49
 perf top -F 49 -ns comm,dso
 ```
 
-## 4.5. static tracing: 静态跟踪
+## 4.5. Static Tracing: 静态跟踪
 
 子命令`record`, 针对具体事件进行**收集**
 
@@ -828,7 +834,7 @@ stackcollapse-p 23883 [005] 4762405.768038:   35045174 cycles:ppp:
 
 总结一下，要愉快的跟踪更完备的信息，就要在**编译软件**时打开符号表的支持(`gcc -g`)，开启**annotate**的支持(`gcc -ggdb`)，以及**Stack trace**的支持(`gcc -fno-omit-frame-pointer`)。
 
-# 7. 功能概述
+# 7. perf功能概述
 
 perf提供了命令行工具`perf`, 以及**很多子命令**. 这是提供各种事件的不同检测框架的单一接口。
 
@@ -928,7 +934,7 @@ Perf是一个包含很多种子工具的多功能工具集，功能很全面。
 * perf kvm: 针对kvm虚拟化分析；
 * perf lock: 分析锁性能；
 * perf mem: 分析内存slab性能；
-* perf sched: 分析内核调度器性能；
+* perf sched: 分析内核调度器性能, 见下面`示例中的Scheduler Analysis(调度器分析)`；
 * perf trace: 记录系统调用轨迹；
 
 ## 7.4. perf record
@@ -954,21 +960,21 @@ Perf是一个包含很多种子工具的多功能工具集，功能很全面。
 
 perf工具可以分为**三种方式**：
 
-* `counting`(**计数**): 在**内核上下文**中对事件进行**计数**，其中perf打印计数摘要。 此模式**不会生成perf.data文件**。
+* `counting`(**计数**): 在**内核上下文**中对**事件**进行**计数**，其中perf打印计数摘要。 此模式**不会生成perf.data文件**。
 * `sampling`(**采样**): 采样事件，将**事件数据**写入**内核缓冲区**，perf命令以柔和的异步速率读取事件数据，以写入`perf.data`文件。 然后，perf report或perf script命令将**读取此文件**。
 * `bpf`: 关于事件的**bpf程序**，这是Linux 4.4+内核中的一项新功能，可以在**内核空间**中执行**自定义的用户定义程序**，从而可以执行高效的数据过滤和汇总。 例如，有效测量的时间延迟直方图。
 
 而这也对应了性能分析的三个过程: 
 
-1. 先尝试从**事件计数**开始, 使用`perf stat`命令，看是否足够。 该子命令**开销最少**。
+1. 先尝试从**事件计数**开始, 使用`perf stat`命令，看是否足够。该子命令**开销最少**。
 2. 再是**采样模式**, 使用`perf record`命令，需要对开销稍加注意，因为捕获文件会迅速变为数百兆字节。 这取决于**跟踪的事件的速率**：频率越高，开销越高，`perf.data`数据大小也越大。
-3. 要真正**减少开销**并生成更多**高级摘要**，需要编写由perf执行的**BPF程序**。 请参阅[eBPF](http://www.brendangregg.com/perf.html#eBPF)部分。
+3. 要真正**减少开销**并生成更多**高级摘要**，需要编写由perf执行的**BPF程序**。 请参阅下面`eBPF`部分。
 
 ## 7.7. 使用示例
 
-选择这些例子是为了说明perf的**不同使用方式**, 从收集到报告.
+选择这些例子是为了说明perf的**不同使用方式**, 从收集到报告, 详细的看下面的示例.
 
-1. **gzip命令**的**性能计数**摘要，包括IPC等：
+1. **gzip命令**的**性能计数**摘要，包括IPC(instructions per cycle, 每个周期的指令数)等：
 
 ```
 # perf stat gzip XXX
@@ -994,17 +1000,7 @@ perf工具可以分为**三种方式**：
        0.863981000 seconds sys
 ```
 
-其中:
-* `task-clock`(用于执行程序的CPU时间)
-* `context-switches`(程序在运行过程中发生的上下文切换次数)
-* `cpu-migrations`(程序在运行过程中发生的CPU迁移次数，即被调度器从一个CPU转移到另外一个CPU上运行)
-* `page-faults`(缺页)
-* `cycles`(CPU时钟周期)
-* `instructions`(该进程在这段时间内完成的CPU指令)
-* `branches`(这段时间内发生分支预测的次数)
-* `branch-misses`(这段时间内分支预测失败的次数)
-
-2. 统计(count)5秒的**所有调度程序进程事件**，按**tracepoint**计数：
+2. 统计(count)5秒的**所有调度程序进程事件**，按**tracepoint计数**：
 
 ```
 # perf stat -e 'sched:sched_process_*' -a sleep 5
@@ -1025,7 +1021,7 @@ perf工具可以分为**三种方式**：
        5.001998189 seconds time elapsed
 ```
 
-3. 跟踪(trace)5秒的**所有调度程序进程事件**，按**tracepoint**和**进程名称**计数：
+3. **跟踪**(`trace`)5秒的**所有调度程序进程事件**，按**tracepoint**和**进程名称**：
 
 ```
 # perf record -e 'sched:sched_process_*' -a sleep 5
@@ -1042,7 +1038,7 @@ Couldn't synthesize cgroup events.
 # perf report
 ```
 
-4. 跟踪(trace)5秒的**所有调度程序进程事件**，并且**dump详细信息**：
+4. **跟踪**(`trace`)5秒的**所有调度程序进程事件**，并且**dump详细信息**：
 
 ```
 # perf record -e 'sched:sched_process_*' -a sleep 5
@@ -1069,7 +1065,7 @@ Couldn't synthesize cgroup events.
  ......
 ```
 
-5. 跟踪(trace)`read()`系统调用, 并且请求的bytes小于10:
+5. **跟踪**(`trace`)`read()`系统调用, 并且请求的bytes小于10:
 
 ```
 # perf record -e 'syscalls:sys_enter_read' --filter 'count < 10' -a
@@ -1144,16 +1140,16 @@ Removed event: probe:tcp_sendmsg
 
 分为六种类型的事件:
 
-* **硬件事件**(`Hardware Events`): CPU性能监控计数(CPU performance monitoring counters).
-* **软件事件**(`Software Events`): 这些是基于内核计数器的低级事件. 比如, CPU迁移、次要故障和主要故障等等.
-* **内核tracepoint事件**(`Kernel Tracepoint Events`): 这些是内核中的静态检测点, 是在内核合适位置硬编码进去的.
-* **用户静态定义追踪**(`User Statically-Defined Tracing`, USDT): 这些是用户态程序中的静态tracepoint.
-* **动态追踪**(`Dynamic Tracing`): 可以在软件的任何位置创建事件, 从而可以被动态检测. 
-  * 对于**内核**来说, 利用了`kprobes`框架;
+* **硬件事件**(`Hardware Events`): CPU性能监控计数(CPU performance monitoring counters)**硬件计数器**. 计数.
+* **软件事件**(`Software Events`): 这些是基于**内核计数器**的低级事件. 比如, CPU迁移、次要故障和主要故障等等. 计数.
+* **内核态tracepoint事件**(`Kernel Tracepoint Events`): 这些是内核中的**静态检测点**, 是在内核合适位置**硬编码**进去的. 硬编码.
+* **用户静态定义追踪**(`User Statically-Defined Tracing`, USDT): 这些是用户态程序中的静态tracepoint. 硬编码.
+* **动态追踪**(`Dynamic Tracing`): 可以在软件的**任何位置**创建事件, 从而可以被动态检测. **动态编码**.
+  * 对于**内核态**来说, 利用了`kprobes`框架;
   * 对于**用户态**程序, 使用了`uprobes`.
-* **定时分析**(`Timed Profiling`): 使用`perf record -F Hz`, 能够以任意频率收集快照(当时的系统信息). 这通常用于**CPU使用情况**分析, 并且通过**创建自定义定时中断事件**来工作.
+* **定时间隔性能分析**(`Timed Profiling`): 使用`perf record -F Hz`, 能够以**任意频率**收集快照(**指令指针IP**或**堆栈跟踪Stack Trace**), 工作机制是**定期引发中断**. 这通常用于**CPU使用情况**分析(), 所以又称CPU Profiling. 具体见下面. 
 
-### 8.1.1. perf list查看所有性能事件
+## 8.2. perf list查看所有性能事件
 
 **不同型号的CPU**支持的**硬件性能事件**不尽相同。**不同版本的内核**提供的**软件性能事件**与 **Tracepoint events** 也不尽相同。
 
@@ -1219,27 +1215,25 @@ List of pre-defined events (to be used in -e):
 
 当使用**动态跟踪**，将**扩展此列表**。 此列表中的`probe:tcp_sendmsg`跟踪点是一个示例，我通过检测`tcp_sendmsg()`添加了该示例。 
 
-## 8.2. Hardware Events (PMCs): 硬件性能事件(PMCs)
+## 8.3. Hardware Events(PMCs): 硬件性能事件(PMCs)
 
-- Hardware Event
+由**PMU部件产生**，在特定的条件下探测性能事件**是否发生**以及发生的**次数**。比如**cache命中**。
 
-由**PMU部件产生**，在特定的条件下探测性能事件是否发生以及发生的次数。比如cache命中。
-
-来自CPU自己或CPU的PMU（`Performance Monitoring Unit`，性能监控单元），包含一系列**微架构事件**例如时钟周期、L1缓存丢失等。具体支持的事件类型取决于CPU型号
+来自CPU自己或CPU的PMU（`Performance Monitoring Unit`，性能监控单元）硬件计数，包含一系列**微架构事件**例如时钟周期、L1缓存丢失等。具体支持的事件类型取决于CPU型号.
 
 完整的性能事件列表见Intel手册`Performance Monitoring Events`
 
 一个典型CPU将以下面方式实现PMCs: 在同一时间只能从成千上万的可用PMCs中记录几个. 因为CPU上的硬件资源是固定的(寄存器数量有限), 通过编程这些寄存器对已选的事件进行计数.
 
-使用PMCs的例子, 可以见下面的 `CPU Statistics`
+使用PMCs的例子, 可以见下面示例中的 `CPU Statistics(CPU静态统计)`
 
-## 8.3. Software Events: 软件性能事件
+## 8.4. Software Events: 软件性能事件
 
-- Software Event是**内核产生的事件/计数器**，分布在**各个功能模块**中，统计和**操作系统相关性能事件**。比如**进程切换**，等。
+- Software Event是**内核！！！产生的事件/计数器**，分布在**各个功能模块**中，统计和**操作系统相关性能事件**。比如**进程切换**，等。
 
-基于**内核计数器**的低级事件，例如CPU迁移、**tick数**、上下文切换、Minor Faults、Major Faults（页面错误）
+基于**内核计数器！！！** 的低级事件，例如**CPU迁移**、**tick数**、**上下文切换**、**Minor Faults**、**Major Faults**（页面错误）
 
-软件性能事件比较少
+perf提供了一些**固定的软件事件**:
 
 ```
 # ./perf list
@@ -1259,7 +1253,7 @@ List of pre-defined events (to be used in -e):
 ...
 ```
 
-通过`man perf_event_open`也能看到, type是`PERF_TYPE_SOFTWARE`
+通过`man perf_event_open(2)`也能看到, type是`PERF_TYPE_SOFTWARE`
 
 ```
               If type is PERF_TYPE_SOFTWARE, we are measuring software events provided by the kernel.  Set config to one of the following:
@@ -1296,9 +1290,11 @@ List of pre-defined events (to be used in -e):
 ...
 ```
 
-内核也支持tracepoints, 和软件事件类似, 但是内核tracepoints有不同的扩展性更强的API.
+内核也支持`tracepoints`, 和软件事件类似, 但是内核tracepoints有不同的扩展性更强的API.
 
-软件事件有默认的周期. 这意味着当对软件事件采样时, 采样的是事件的子事件, 而不是每个事件. 通过`perf record -vv`可以查看
+### 8.4.1. 采样周期
+
+**软件事件**有**默认的周期**. 这意味着当对软件事件采样时, 采样的是事件的**一部分子集**, 而**不是中间经历的每一次事件**. 通过`perf record -vv`可以查看
 
 ```
 ./perf record -vv -e context-switches /bin/true
@@ -1322,19 +1318,14 @@ perf_event_attr:
   comm                             1
   freq                             1
   enable_on_exec                   1
-  task                             1
-  sample_id_all                    1
-  exclude_guest                    1
-  mmap2                            1
-  comm_exec                        1
-  ksymbol                          1
-  bpf_event                        1
 ...
 ```
 
 注意: `{ sample_period, sample_freq }`
 
-通过`man perf_event_open`查看这几个属性的描述. 默认情况下, 这些属性表明内核调整采样频率, 从而每秒能捕获 4000 个`context-switch`事件. 如果打算record所有, 使用`-c 1`:
+通过`man perf_event_open(2)`查看这几个属性的描述. **默认情况**下, 这些**属性**表明内核**调整采样频率**, 从而**每秒**捕获 **4000** 个`context-switch`事件. 
+
+如果打算record中间经历的所有事件, 使用`-c 1`, 表明每发生一次`context-switches`便收集一次stack trace信息:
 
 ```
 ./perf record -vv -e context-switches -c 1 /bin/true
@@ -1357,39 +1348,36 @@ perf_event_attr:
   mmap                             1
   comm                             1
   enable_on_exec                   1
-  task                             1
-  sample_id_all                    1
-  exclude_guest                    1
-  mmap2                            1
-  comm_exec                        1
-  ksymbol                          1
-  bpf_event                        1
 ------------------------------------------------------------
 ...
 ```
 
 注意: `{ sample_period, sample_freq }`
 
-Check the rate of events using perf stat first, so that you can estimate the volume of data you'll be capturing. Sampling a subset by default may be a good thing, especially for high frequency events like context switches.
+首先使用`perf stat`检查事件**发生率**，以便您可以估计要捕获的**数据量**。 默认情况下对**子集**进行采样可能是一件好事，尤其是对于诸如上下文切换之类的高频事件。
 
-Many other events (like tracepoints) have a default of 1 anyway. You'll encounter a non-1 default for many software and hardware events.
+无论如何，许多其他事件（例如跟踪点）的默认值为1。 您会在许多软件和硬件事件中遇到非1的默认值。
 
+## 8.5. Kernel Tracepoints: 内核态静态tracepoints
 
-## 8.4. Kernel Tracepoints: 内核态Tracepoints
+- Tracepoint Event是内核中**静态tracepoint所触发的事件**，是**硬编码**进内核中的, 可以用来判断程序运行期间内核的行为细节（这些tracepint的对应的sysfs节点在`/sys/kernel/debug/tracing/events`目录下）。比如systemcalls、TCP events、file system I/O、disk I/O、slab分配器的分配次数等。
 
-- Tracepoint Event是内核中**静态tracepoint所触发的事件**，是硬编码进内核中的, 可以用来判断程序运行期间内核的行为细节（这些tracepint的对应的sysfs节点在`/sys/kernel/debug/tracing/events`目录下）。比如system calls、TCP events、file system I/O、disk I/O、slab分配器的分配次数等。
-
-内核态tracepoints被分组, 比如, "sock:"表明是socket事件, "sched:"表明是CPU调度事件.
-
-tracepoints有个关键的点事要有稳定的API(事件名字和参数), 当写代码能使用它们, 并且在后续的版本中持续支持.
+tracepoints有个关键的点是要有稳定的API(事件名字和参数), 当写代码能使用它们, 并且在后续的版本中持续支持.
 
 kernel tracepoints在内核代码中实现通常是宏定义在`include/trace/events/*.XXX`.
+
+### 8.5.1. tracepoints分组
+
+内核态tracepoints**被分组**, 比如, "`sock:`"表明是**socket事件**, "`sched:`"表明是**CPU调度事件**.
 
 查看内核中分组的名字和数量:
 
 ```
-# ./perf list | awk -F: '/Tracepoint event/ { lib[$1]++ } END {
->     for (l in lib) { printf "  %-16.16s %d\n", l, lib[l] } }' | sort | column
+./perf list | awk -F: '/Tracepoint event/ { lib[$1]++ } END { for (l in lib) { printf "  %-16.16s %d\n", l, lib[l] } }' | sort | column
+```
+
+```
+# ./perf list | awk -F: '/Tracepoint event/ { lib[$1]++ } END { for (l in lib) { printf "  %-16.16s %d\n", l, lib[l] } }' | sort | column
     alarmtimer     4	    kmem           13	    raw_syscalls   2
     block          18	    kvm            76	    rcu            1
     bridge         4	    kvmmmu         16	    rpcgss         21
@@ -1424,34 +1412,23 @@ kernel tracepoints在内核代码中实现通常是宏定义在`include/trace/ev
 
 这些包括:
 
-* block: block device I/O
-* ext4: file system operations
-* kmem: kernel memory allocation events
-* random: kernel random number generator events
-* sched: CPU scheduler events
-* syscalls: system call enter and exits
-* task: task events
+* block: 块设备I/O
+* ext4: ext4文件系统操作
+* kmem: 内核内存分配
+* random: 随机数生成
+* sched: CPU调度
+* syscalls: 系统调用进入和退出
+* task: 任务
 
-关于使用这些tracepoints的例子, 见下面的`Static Kernel Tracing` 静态内核Tracing
+每当kernel更新后, 检查一下tracepoint列表都是很有必要的. 添加它们的价值不时在争论中，它想知道会有多少人使用它们（我愿意）。 
 
+关于使用这些tracepoints的例子, 见下面示例的`Static Kernel Tracing(内核静态追踪)`
 
+## 8.6. User-Level Statically Defined Tracing (USDT): 用户态静态tracepoint
 
-由内核中的**ftrace**实现，包括：
-1. 内核**追踪点事件**，静态的、内核级的追踪点，**硬编码**到内核
-2. 用户**静态定义追踪**（USDT），**用户态应用程序硬编码**的追踪点
-3. **动态追踪**，软件可以被动态instrumented，在任何位置创建事件。
-  - 对于**内核软件**，使用**kprobes框架**；
-  - 对于**用户软件**，使用**uprobes**
-4. 定时追踪，以任意频率抓取快照，主要用于CPU剖析，工作机制是定期引发中断
-  - perf record -F XXXHz
+和kernel tracepoints类似, USDT是在**用户态**应用中**硬编码**的, 对外表现就是稳定的API(事件名字和参数).
 
-
-
-## 8.5. User-Level Statically Defined Tracing (USDT): 用户态tracepoint
-
-和kernel tracepoints类似, USDT是在用户态应用中硬编码的, 对外表现就是稳定的API(事件名字和参数).
-
-目前, 很多应用程序已经开始包含了tracepoints, 用来支持DTrace. 但是, 多数应用默认情况下并不会默认编译. 通常编译时候需要使用参数`--with-dtrace`.
+目前, 很多应用程序已经开始包含了tracepoints, 用来支持[DTrace](http://www.brendangregg.com/dtrace.html). 但是, 多数应用默认情况下并不会默认编译. 通常编译时候需要使用参数`--with-dtrace`.
 
 例如, `Node.js`编译支持
 
@@ -1468,42 +1445,40 @@ $ make -j 8
 
 ![2020-07-27-14-25-03.png](./images/2020-07-27-14-25-03.png)
 
-关于USDT使用的例子, 见下面`Static User Tracing`.
+关于USDT使用的例子, 见下面`Static User Tracing(用户态静态追踪)`.
 
-## 8.6. Dynamic Tracing: 动态追踪
+## 8.7. Dynamic Tracing: 动态追踪
 
-tracepoints和dynamic tracing动态追踪的不同在于下图, 说明了一个通用tracepoint的覆盖范围:
+静态tracepoints和动态tracing动态追踪的不同在于下图, 说明了一个通用tracepoint的覆盖范围:
 
 ![2020-07-27-14-31-43.png](./images/2020-07-27-14-31-43.png)
-
-While dynamic tracing can see everything, it's also an unstable interface since it is instrumenting raw code. That means that any dynamic tracing tools you develop may break after a kernel patch or update. Try to use the static tracepoints first, since their interface should be much more stable. They can also be easier to use and understand, since they have been designed with a tracing end-user in mind.
-
-One benefit of dynamic tracing is that it can be enabled on a live system without restarting anything. You can take an already-running kernel or application and then begin dynamic instrumentation, which (safely) patches instructions in memory to add instrumentation. That means there is zero overhead or tax for this feature until you begin using it. One moment your binary is running unmodified and at full speed, and the next, it's running some extra instrumentation instructions that you dynamically added. Those instructions should eventually be removed once you've finished using your session of dynamic tracing.
 
 The overhead while dynamic tracing is in use, and extra instructions are being executed, is relative to the frequency of instrumented events multiplied by the work done on each instrumentation.
 
 
-虽然动态跟踪可以看到**所有东西**，但它也是一个不稳定的接口，因为它**检测原始代码**。这意味着在**内核补丁**或**更新**之后，您开发的任何**动态跟踪工具**都**可能崩溃**。**首先**尝试使用**静态跟踪点**，因为它们的接口应该更加稳定。它们也更容易使用和理解，因为在设计时考虑了跟踪最终用户。
+虽然动态跟踪可以看到**所有东西**，但它也是一个**不稳定的接口**，因为它**检测原始代码**。这意味着在**内核补丁**或**更新**之后，您开发的任何**动态跟踪工具**都**可能崩溃**。所以**首先**尝试使用**静态跟踪点**，因为它们的接口应该更加稳定。它们也更容易使用和理解，因为在设计时考虑了跟踪最终用户。
 
-动态跟踪的一个好处是可以在活动的系统上启用它，而不需要重新启动任何东西。您可以使用一个已经运行的内核或应用程序，然后开始动态插装，这将(安全地)对内存中的指令进行补丁，以添加插装。这意味着在您开始使用该特性之前，它没有任何开销或税收。前一刻二进制文件还在全速运行，而下一刻，它又在运行一些您动态添加的额外插装指令。一旦您完成了动态跟踪会话的使用，这些指令最终应该被删除。
+动态跟踪的一个好处是可以在**正在运行的系统**上启用它，而**不需要重新启动任何东西**。您可以使用一个已经运行的内核或应用程序，然后开始**动态插装**，这将(安全地)**对内存中的指令**进行打补丁，以添加插装。这意味着在开始**使用该特性之前**，它没有任何开销或税收。前一刻二进制文件还在全速运行，而下一刻，它又在运行一些动态添加的额外插装指令。一旦您完成了动态跟踪会话的使用，这些指令最终应该被删除。
 
 使用动态跟踪和执行额外指令时的开销相对于检测事件的频率乘以在每个检测上完成的工作。
 
-
-使用动态追踪的例子, 见`Dynamic Tracing`
-
+使用动态追踪的例子, 见`Dynamic Tracing(动态追踪)`
 
 
-要启用内核动态追踪，需要使用内核编译参数`CONFIG_KPROBES=y`、`CONFIG_KPROBE_EVENTS=y`。要追踪基于帧指针的内核栈，需要内核编译参数`CONFIG_FRAME_POINTER=y`。
+
+要启用内核动态追踪，需要使用内核编译参数`CONFIG_KPROBES=y`、`CONFIG_KPROBE_EVENTS=y`。
 
 要启用**用户动态追踪**，需要使用内核编译参数`CONFIG_UPROBES=y`、`CONFIG_UPROBE_EVENTS=y`
 
 
-# 9. 例子
 
-## 9.1. CPU Statistics: CPU统计
+# 9. 示例(性能分析分类)
 
-`perf stat`命令汇总了CPU事件(PMCs).
+这也对应性能分析的几种情况
+
+## 9.1. CPU Statistics: CPU静态统计
+
+`perf stat`命令汇总了**CPU事件**(PMCs).
 
 ```
 # perf stat gzip file1
@@ -1525,11 +1500,27 @@ The overhead while dynamic tracing is in use, and extra instructions are being e
        1.936842598 seconds time elapsed
 ```
 
+其中:
+* `task-clock`(用于执行程序的CPU时间)
+* `context-switches`(程序在运行过程中发生的上下文切换次数)
+* `cpu-migrations`(程序在运行过程中发生的CPU迁移次数，即被调度器从一个CPU转移到另外一个CPU上运行)
+* `page-faults`(缺页)
+* `cycles`(CPU时钟周期)
+* `instructions`(该进程在这段时间内完成的CPU指令)
+* `branches`(这段时间内发生分支预测的次数)
+* `branch-misses`(这段时间内分支预测失败的次数)
+
+这包括每个时钟周期执行的指令数(instructions per cycle, IPC)，标记为“insns per cycle”或早期版本的“IPC”。**IPC**或其反转**CPI**常用的**度量标准**。 **较高的IPC**值表示**较高的指令吞吐量**，而较低的值表示**更多的停顿周期**。 
+
+通常认为高IPC值（例如，超过1.0）是好的，这表明可以对工作进行最佳处理。 但是，需要仔细检查一下**指令是什么**，以防这是由于**旋转循环造成**的：**指令率高**，但**实际工作率低**。
+
+`perf stat`现在包括一些**高级指标**：`frontend cycles idle`(**前端周期空闲**)，`backend cycles idle`(**后端周期空闲**)和`stalled cycles per insn`(**每个insn的停顿周期**)。要真正理解这些内容，您需要一些CPU微体系结构的知识。
+
 ### 9.1.1. CPU 微架构
 
-### 9.1.2. Detailed Mode
+### 9.1.2. Detailed Mode: 详细模式
 
-`perf stat`有一个Detailed Mode, 通过`-d`选项:
+`perf stat`有一个**Detailed Mode**, 通过`-d`选项:
 
 ```
 # perf stat -d gzip file1
@@ -1555,28 +1546,269 @@ The overhead while dynamic tracing is in use, and extra instructions are being e
        1.614165346 seconds time elapsed
 ```
 
-This includes additional counters for Level 1 data cache events, and last level cache (LLC) events.
+这个额外包含了`L1 data cache`(L1 数据缓存)和**LLC**(last level cache, 最后一级缓存)事件.
 
-这个额外包含了L1 data cache(L1 数据缓存)和LLC cache(最后一级缓存)事件.
+### 9.1.3. Specific Counters: 具体计数器
 
-### 9.1.3. Specific Counters
+**硬件cache事件计数器**, 可以通过`perf list`查看:
 
-### 9.1.4. Raw Counters
+```
+# perf list | grep L1-dcache
+  L1-dcache-loads                                    [Hardware cache event]
+  L1-dcache-load-misses                              [Hardware cache event]
+  L1-dcache-stores                                   [Hardware cache event]
+  L1-dcache-store-misses                             [Hardware cache event]
+  L1-dcache-prefetches                               [Hardware cache event]
+  L1-dcache-prefetch-misses                          [Hardware cache event]
 
-### 9.1.5. Other Options
+# perf stat -e L1-dcache-loads,L1-dcache-load-misses,L1-dcache-stores gzip file1
+
+ Performance counter stats for 'gzip file1':
+
+     1,947,551,657 L1-dcache-loads
+                                            
+       153,829,652 L1-dcache-misses     #    7.90% of all L1-dcache hits
+     1,171,475,286 L1-dcache-stores
+                                           
+
+       1.538038091 seconds time elapsed
+```
+
+基于指定的计数器，打印的百分比是perf的便捷计算。如果包括“**cycle周期**”和“**instructions指令**”计数器，则在输出中将包括IPC计算。
+
+可以测量的这些硬件事件通常特定于**处理器模型**。 在**虚拟化环境**中，许多可能不可用。
+
+### 9.1.4. Raw Counters: 处理器支持的原始计数器
+
+`Intel 64 and IA-32 Architectures Software Developer's Manual Volume 3B: System Programming Guide` 和 `BIOS and Kernel Developer's Guide (BKDG) For AMD Family 10h Processors`中描述了所有的计数器, 但是大多数没有在`perf list`中.
+
+如果找到要检测的事件，则可以将其指定为**原始事件**，其格式为：`rUUEE`，其中`UU==umask`，而`EE==事件号`。 
+
+在以下示例中，我添加了几个原始计数器：
+
+```
+# perf stat -e cycles,instructions,r80a2,r2b1 gzip file1
+
+ Performance counter stats for 'gzip file1':
+
+     5,586,963,328 cycles                    #    0.000 GHz                    
+     8,608,237,932 instructions              #    1.54  insns per cycle        
+         9,448,159 raw 0x80a2                                                  
+    11,855,777,803 raw 0x2b1                                                   
+
+       1.588618969 seconds time elapsed
+```
+
+`r80a2`已检测到`RESOURCE_STALLS.OTHER`，而`r2b1`已检测到`UOPS_DISPATCHED.CORE`：每个周期分配的**uops**数量。
+
+如果您确实找到了一个很好的原始计数器，请建议将其作为别名添加到perf中，这样我们大家都可以在perf列表中找到它。
+
+### 9.1.5. Other Options: 其他选项
+
+perf的子命令, 尤其`stat`, 有很多可扩展的选项, 通过`perf stat -h`可以看到.
+
+其中`--repeat`, `--sync`, `--pre`和`--post`等在自动化测试或benchmark中很有效.
+
+## 9.2. Timed Profiling(CPU Profiling): 定时间隔性能分析
+
+很多也称为**CPU Profiling**, 因为其实就是对CPU的执行情况的分析
+
+定时间隔性能分析: perf可以基于以**固定间隔**对**instruction pointer(IP, 指令指针！！！**) 或**stack trace(堆栈跟踪！！！**) 进行**sampling(采样**)来分析**CPU使用情况！！！**。
+
+### 9.2.1. sampling: 采样
+
+以**99Hz**(`-F 99`)对整个系统(`-a`, 表明所有CPU), 带着堆栈信息(`-g`, 表明调用图), 进行CPU堆栈**采样**(sampling), 持续10s:
+
+```
+# perf record -F 99 -a -g -- sleep 30
+[ perf record: Woken up 9 times to write data ]
+[ perf record: Captured and wrote 3.135 MB perf.data (~136971 samples) ]
+
+# ls -lh perf.data
+-rw------- 1 root root 3.2M Jan 26 07:26 perf.data
+```
+
+选择**99Hz**而**不是100Hz**，是为了避免以一定的周期性活动意外地进行采样，这会产生偏斜的结果。 这也很粗糙：您可能希望将其提高到**更高的速率**（例如，达到 997 Hz）以获得更高的分辨率，尤其是在您对**短时间的活动**突发采样并且仍然希望有足够的分辨率有用时。 请记住，更高的频率意味着更高的开销。
+
+### 9.2.2. 分析
+
+`perf.data`文件可以通过**多种方式处理**。 
+* 在最新版本中，`perf report`命令将启动`ncurses`导航器以进行**调用图检查**。 
+* 在perf的旧版本（或者在新版本中使用`--stdio`）将**调用图**打印**为树**，并用**百分比**进行注释：
+
+```
+# perf report --stdio
+# ========
+# captured on: Mon Jan 26 07:26:40 2014
+# hostname : dev2
+# os release : 3.8.6-ubuntu-12-opt
+# perf version : 3.8.6
+# arch : x86_64
+# nrcpus online : 8
+# nrcpus avail : 8
+# cpudesc : Intel(R) Xeon(R) CPU X5675 @ 3.07GHz
+# cpuid : GenuineIntel,6,44,2
+# total memory : 8182008 kB
+# cmdline : /usr/bin/perf record -F 99 -a -g -- sleep 30 
+# event : name = cpu-clock, type = 1, config = 0x0, config1 = 0x0, config2 = ...
+# HEADER_CPU_TOPOLOGY info available, use -I to display
+# HEADER_NUMA_TOPOLOGY info available, use -I to display
+# pmu mappings: software = 1, breakpoint = 5
+# ========
+#
+# Samples: 22K of event 'cpu-clock'
+# Event count (approx.): 22751
+#
+# Overhead  Command      Shared Object                           Symbol
+# ........  .......  .................  ...............................
+#
+    94.12%       dd  [kernel.kallsyms]  [k] _raw_spin_unlock_irqrestore
+                 |
+                 --- _raw_spin_unlock_irqrestore
+                    |          
+                    |--96.67%-- extract_buf
+                    |          extract_entropy_user
+                    |          urandom_read
+                    |          vfs_read
+                    |          sys_read
+                    |          system_call_fastpath
+                    |          read
+                    |          
+                    |--1.69%-- account
+                    |          |          
+                    |          |--99.72%-- extract_entropy_user
+                    |          |          urandom_read
+                    |          |          vfs_read
+                    |          |          sys_read
+                    |          |          system_call_fastpath
+                    |          |          read
+                    |           --0.28%-- [...]
+                    |          
+                    |--1.60%-- mix_pool_bytes.constprop.17
+[...]
+```
+
+该树状信息以CPU上的函数开始，并一直追溯到祖先。这种方法称为“`callee based call graph`”(**基于被调用者的调用图**)。 
+
+可以使用`-G`表示“`inverted call graph`”(**反向调用图**)，也可以使用`-g/-call-graph`的“`caller`”(**调用者**)选项（而不是默认的"**callee被调用者**"）来翻转。
+
+此性能调用图中**最热**（最频繁）的**堆栈跟踪**发生在采样的`90.99％`中，这是开销百分比和**顶部堆栈叶**(top stack leaf)的乘积（`94.12％ x 96.67％`，这是**相对比率**）。 
+
+性能报告也可以用“ -g graph”运行以显示**绝对开销率**，在这种情况下，“ 90.99％”直接显示在堆栈叶上, 类似于:
+
+```
+    94.12%       dd  [kernel.kallsyms]  [k] _raw_spin_unlock_irqrestore
+                 |
+                 --- _raw_spin_unlock_irqrestore
+                    |          
+                    |--90.99%-- extract_buf
+[...]
+```
+
+如果用户态堆栈不完整, `perf record`可以使用`--call-graph dwarf`参数作为一个手段来unwind堆栈. 详细见前面.
+
+`perf report`的输出可能很长, 从而难以阅读, 可以试着生成火焰图. 详细见后面.
+
+## 9.3. Event Profiling: 事件分析
+
+除了以一定的时间间隔进行采样外，**CPU硬件计数器**触发的采样是**CPU性能分析**的另一种形式，可用于更加了解`cache misses`**高速缓存未命中**，`memory stall cycles`**内存停顿周期**和其他低级处理器事件。 
+
+可用的事件可以使用`perf list`找到：
+
+```
+# perf list | grep Hardware
+  cpu-cycles OR cycles                               [Hardware event]
+  instructions                                       [Hardware event]
+  cache-references                                   [Hardware event]
+  cache-misses                                       [Hardware event]
+  branch-instructions OR branches                    [Hardware event]
+  branch-misses                                      [Hardware event]
+  bus-cycles                                         [Hardware event]
+  stalled-cycles-frontend OR idle-cycles-frontend    [Hardware event]
+  stalled-cycles-backend OR idle-cycles-backend      [Hardware event]
+  ref-cycles                                         [Hardware event]
+  L1-dcache-loads                                    [Hardware cache event]
+  L1-dcache-load-misses                              [Hardware cache event]
+  L1-dcache-stores                                   [Hardware cache event]
+  L1-dcache-store-misses                             [Hardware cache event]
+[...]
+```
+
+对于许多这样的硬件事件，每次发生时**收集堆栈**都会导致**过多的开销**，并且会降低系统速度并**更改目标的性能特征**。 
+
+所以通常**只需检测一小部分事件**，而不是全部事件, 这样就已经够用。可以通过使用“`-c`”和**一个计数指定触发事件**收集的**阈值**来达到这个目的.
+
+比如, 下面的命令用来检测`level 1 data load misses`, 每发生10000次收集一次stack trace
+
+```
+# perf record -e L1-dcache-load-misses -c 10000 -ag -- sleep 5
+```
+
+"`-c count`"机制是由处理器实现的, 当处理器达到这个阈值才中断内核.
+
+指定自定义计数器例子可以看前面的`Raw Counters`和下面的`skew`部分
+
+### Skew和PEBS: 指令偏移和PEBS基于采样的精确事件
+
+`Event Profiling`(**事件分析**)存在一个问题，而`CPU Profiling`(**定时采样**)不会遇到这个问题。 
+
+* 对于**定时采样**，在**中断**与**读取指令指针**（IP）之间是否存在**较小**的**亚微秒**(`sub-microsecond`)延迟并**不重要**。而且一些CPU分析器故意引入此抖动，这是避免进行锁步采样的另一种方法。 
+* 但对于事件分析而言，这确实很重要：如果您试图在**某个PMC事件**上**捕获IP**，并且**PMC溢出**和**捕获IP**之间存在**延迟**，则IP将指向**错误的地址**。这就会偏移(skew)。 
+
+另一个引起问题的问题是，微操作是`parallel`**并行**且`out-of-order`**无序**地处理的，而指令指针IP指向**恢复指令**，而**不是导致事件的指令**。 在[这里](https://www.slideshare.net/brendangregg/scale2015-linux-perfprofiling/63)已经讨论过了。
+
+解决方案是“**精确采样**”，在intel上是**PEBS**(`Precise Event-Based Sampling`, 基于事件的精确采样)，在AMD上是**IBS**(`Instruction-Based Sampling`, 基于指令的采样)。它们使用**CPU硬件支持**来捕获**事件发生**时**CPU的真实状态**。 
+
+通过`:p`修饰符标明PMC事件名, perf可以使用精确采样, 例如"`-e instructions:p`". p越多, 则越精确(accurate). 下面内容来自`tools/perf/Documentation/perf-list.txt`的文档：
+
+```
+The 'p' modifier can be used for specifying how precise the instruction
+address should be. The 'p' modifier can be specified multiple times:
+
+ 0 - SAMPLE_IP can have arbitrary skid
+ 1 - SAMPLE_IP must have constant skid
+ 2 - SAMPLE_IP requested to have 0 skid
+ 3 - SAMPLE_IP must have 0 skid, or uses randomization to avoid
+     sample shadowing effects.
+```
+
+`p`修饰符用来表明指令地址的精确程度. 在**某些情况**下，perf将**默认**使用**精确采样**，而**无需指定它**。 运行“`perf record -vv ...`”以查看“ `precise_ip`”的值。 
+
+另注意，**仅某些PMC支持PEBS**。
+
+如果PEBS完全没有工作, 可以检查dmesg:
+
+```
+# dmesg | grep -i pebs
+[    0.387014] Performance Events: PEBS fmt1+, SandyBridge events, 16-deep LBR, full-width counters, Intel PMU driver.
+[    0.387034] core: PEBS disabled due to CPU errata, please upgrade microcode
+```
+
+通过更新微码包修复, 如下(intel平台):
+
+```
+# yum install microcode_ctl linux-firmware -y
+
+# reboot
+
+# dmesg | grep -i pebs
+[    0.386596] Performance Events: PEBS fmt1+, SandyBridge events, 16-deep LBR, full-width counters, Intel PMU driver.
+#
+```
+
+## 9.4. Static Kernel Tracing: 内核态静态追踪
 
 
-## 9.2. Timed Profiling:
+### Counting Syscalls: 系统调用计数
 
-## 9.3. Event Profiling:
 
-## 9.4. Static Kernel Tracing: 静态内核态追踪
 
-## 9.5. Static User Tracing: 静态用户态追踪
+
+## 9.5. Static User Tracing: 用户态静态追踪
 
 ## 9.6. Dynamic Tracing
 
-## 9.7. Scheduler Analysis
+## 9.7. Scheduler Analysis: 调度器分析
 
 ## 9.8. eBPF
 
