--- a/Linux/Debug/perf/4. perf record.md
+++ b/Linux/Debug/perf/4. perf record.md
@@ -17,11 +17,11 @@
 
 # 1. 用途
 
-记录一段时间内系统/进程的性能事件
+记录**一段时间**内系统/进程的性能数据
 
 执行一个**指定应用程序**并且记录性能数据到perf.data文件, 该文件可以使用`perf report`进行解析.
 
-此命令可以启动一个命令，并对其进行剖析，然后把剖析数据记录到文件（默认perf.data）。按Ctrl - C可以随时结束剖析。
+此命令可以启动一个命令，并对其进行剖析，然后把剖析数据记录到文件（默认perf.data）。按`Ctrl - C`可以随时结束剖析。
 
 此命令可以在线程、进程、CPU、全局级别进行剖析。
 
@@ -32,10 +32,12 @@ record, report, annotate是一组相关的命名，通常的使用流程是：
 
 该命令**不是记录所有事件**，还是**进行采样**。默认情况下采样基于**cycle事件**，也就是进行定期采样。
 
-perf_events接口允许通过两种方式描述采样周期：
+perf接口允许通过两种方式描述采样周期：
 
 1. period：事件发生的次数
-2. frequency：每秒样本的平均个数
+2. frequency：每秒采集样本的平均个数
+
+第一种对应`-c`参数, 该机制是由处理器实现的, 当处理器达到这个阈值才中断内核.
 
 perf默认使用第二种，具体来说对应到`-F`选项。`-F 1000`表示1000Hz，也就是**每秒平均采样1000个**。内核会动态的调整采样周期，以尽量满足需求。
 
