--- Auto-Git Commit ---

--- a/Linux/Debug/perf/1. perf 简介.md
+++ b/Linux/Debug/perf/1. perf 简介.md
@@ -68,7 +68,7 @@
     - [Kernel: tcp_sending(): 某个内核函数被调用栈](#kernel-tcp_sending-某个内核函数被调用栈)
     - [Kernel: tcp_sendmsg() with size: 获取内核变量](#kernel-tcp_sendmsg-with-size-获取内核变量)
     - [Kernel: tcp_sendmsg() line number and local variable: 内核函数某一行跟踪点和局部变量](#kernel-tcp_sendmsg-line-number-and-local-variable-内核函数某一行跟踪点和局部变量)
-    - [User: malloc():](#user-malloc)
+    - [User: malloc(): 用户态函数](#user-malloc-用户态函数)
   - [9.7. Scheduler Analysis: 调度器分析](#97-scheduler-analysis-调度器分析)
   - [9.8. eBPF](#98-ebpf)
     - [9.8.1.](#981)
@@ -2140,11 +2140,21 @@ You can now use it in all perf tools, such as:
 
 这真是太神奇了。 请记住，还可以使用`--filter`包括内核内过滤，以**仅匹配**所需的数据。
 
-### User: malloc(): 
+### User: malloc(): 用户态函数
 
 尽管这是一个有趣的示例，但我想马上说出`malloc()`调用非常频繁，因此您将需要考虑像这样跟踪调用的开销。
 
+添加一个libc的`malloc()`探针(probe):
 
+```
+# perf probe -x /lib/x86_64-linux-gnu/libc-2.15.so --add malloc
+Added new event:
+  probe_libc:malloc    (on 0x82f20)
+
+You can now use it in all perf tools, such as:
+
+	perf record -e probe_libc:malloc -aR sleep 1
+```
 
 
 
