--- Auto-Git Commit ---

--- a/Linux/Debug/perf/1. perf 简介.md
+++ b/Linux/Debug/perf/1. perf 简介.md
@@ -2156,7 +2156,11 @@ You can now use it in all perf tools, such as:
 	perf record -e probe_libc:malloc -aR sleep 1
 ```
 
+在整个系统范围进行追踪:
 
+```
+
+```
 
 
 ## 9.7. Scheduler Analysis: 调度器分析
